--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -121,8 +121,9 @@ if( OSGBULLET_USE_DOUBLE_PRECISION )
     add_definitions( -DBT_USE_DOUBLE_PRECISION )
 endif()
 
-option( IM_SIZE_REDUCTION "Enable Image Metrics Size Reduction code" OFF )
-if( IM_OSG_SIZE_REDUCTION )
+OPTION( IM_SIZE_REDUCTION "Enable Image Metrics Size Reduction code" OFF )
+if( IM_SIZE_REDUCTION )
+    message( STATUS "IM_SIZE_REDUCTION is defined!" )
     add_definitions( -DIM_OSG_SIZE_REDUCTION )
     add_definitions( -DIM_OSG_NO_WRITE_SERIALIZATION )
     add_definitions( -DIM_OSG_OPENGL_OPTIMIZATION )
